# Friday-2.0

./: .env.email.README.md  .env.email.enc  .env.enc  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  .sops.yaml  BATCH2_FILES.md  CLAUDE.md  CODE_REVIEW_FIXES_2026-02-05.md  COMMIT_MESSAGE.txt  CORRECTIONS_SUMMARY.txt  DEPLOY_CLEANUP_VPS.md  Dockerfile.bot  Dockerfile.email-processor  Dockerfile.imap-fetcher  Dockerfile.n8n  LICENSE  MIGRATION_COMPLETE_STORY_6.4.md  README.md  RECOVERY_GUIDE.md  REVIEW_COMPLETE.md  SECURITY.md  STORY_6.2_GIT_SEPARATION_GUIDE.md  decrypt_env.py  docker-compose.services.yml  docker-compose.yml  domain_filters.csv  fix_last_test.py  pyproject.toml  pytest.ini  run_bot.py  run_migrations_temp.py  telegram-ids-extracted.txt  test_pg_connection.py
.github/: QUALITY_GATES.md  dependabot.yml
_bmad-output/: sprint-tracking.yaml
_docs/: analyse-fonctionnelle-complete.md  architecture-addendum-20260205.md  architecture-friday-2.0.md  friday-2.0-analyse-besoins.md  plan-d25-emailengine-to-imap-direct.md  plan-deploiement-epic2-email.md  story-2.5-code-review.md  story-2.5-readme.md  story-2.5-tests-todo.md  story-2.9-recap-final.md
agents/: pyproject.toml  requirements-lock.txt
agents/docs/: heartbeat-engine-spec.md
agents/src/adapters/: __init__.py  email.py  embedding.py  llm.py  memorystore.py  memorystore_interface.py  vectorstore.py
agents/src/agents/archiviste/: __init__.py  batch_processor.py  batch_progress.py  batch_shared.py  classification_pipeline.py  classifier.py  embedding_generator.py  embedding_pipeline.py  file_mover.py  metadata_extractor.py  models.py  ocr.py  pipeline.py  renamer.py  semantic_search.py  warranty_db.py  warranty_extractor.py  warranty_models.py  warranty_orchestrator.py  warranty_prompts.py  watchdog_config.py  watchdog_handler.py  watchdog_observer.py
agents/src/agents/briefing/: __init__.py  generator.py  templates.py
agents/src/agents/calendar/: __init__.py  conflict_detector.py  event_detector.py  message_event_detector.py  message_prompts.py  models.py  prompts.py
agents/src/agents/dedup/: __init__.py  deleter.py  models.py  priority_engine.py  report_generator.py  scanner.py
agents/src/agents/email/: README_VIP_URGENCE.md  __init__.py  attachment_extractor.py  classifier.py  draft_reply.py  graph_populator.py  models.py  prompts.py  prompts_draft_reply.py  sender_filter.py  task_creator.py  task_extractor.py  urgency_detector.py  vip_detector.py
agents/src/calendar/: __init__.py  models.py
agents/src/config/: arborescence_config.py  mime_types.py
agents/src/core/: __init__.py  check_executor.py  check_registry.py  context.py  context_manager.py  context_provider.py  heartbeat_daemon.py  heartbeat_engine.py  heartbeat_models.py  llm_decider.py  models.py  telegram_helper.py
agents/src/core/checks/: __init__.py  financial_alerts.py  thesis_reminders.py  urgent_emails.py
agents/src/core/heartbeat_checks/: __init__.py  archiviste_health.py  calendar_conflicts.py  warranty_expiry.py
agents/src/integrations/google_calendar/: __init__.py  auth.py  config.py  models.py  requirements.txt  sync_manager.py
agents/src/middleware/: __init__.py  models.py  trust.py
agents/src/models/: __init__.py  attachment.py  email_classification.py  vip_detection.py
agents/src/tools/: anonymize.py  desktop_search_consumer.py  desktop_search_wrapper.py  search_metrics.py
bot/: README.md  __init__.py  action_executor.py  action_executor_draft_reply.py  config.py  main.py  models.py  pyproject.toml  requirements.txt  routing.py
bot/handlers/: __init__.py  arborescence_commands.py  backup_commands.py  batch_commands.py  callbacks.py  casquette_callbacks.py  casquette_callbacks_register.py  casquette_commands.py  classification_callbacks.py  classification_callbacks_register.py  classification_notifications.py  commands.py  conflict_callbacks.py  conflict_callbacks_register.py  conflict_commands.py  conflict_notifications.py  corrections.py  create_event_command.py  dedup_commands.py  draft_commands.py  draft_reply_notifications.py  email_status_commands.py  email_task_notifications.py  event_callbacks.py  event_callbacks_register.py  event_creation_callbacks.py  event_modification_callbacks.py  event_notifications.py  event_proposal_notifications.py  file_handlers.py  file_send_commands.py  formatters.py  messages.py  natural_event_creation.py  pipeline_control.py  rate_limiter.py  recovery_commands.py  rules.py  search.py  search_commands.py  (+6 more)
config/: Caddyfile  __init__.py  arborescence.yaml  calendar_config.yaml  google_client_secret.README.md  google_token.json.enc  logging.py  redis.acl  redis.acl.template  redis.conf  telegram.yaml  trust_levels.yaml  watchdog.yaml
docs/: DECISION_LOG.md  age-private-key-storage-guide.md  ai-models-policy.md  analyse-adversariale-rapport-final.md  archiviste-classification-spec.md  archiviste-ocr-spec.md  archiviste-warranty-spec.md  archiviste-watchdog-spec.md  attachment-extraction.md  backup-and-recovery-runbook.md  batch-processing-spec.md  benchmark-pgvector-performance.md  calendar-event-detection.md  cleanup-rgpd-spec.md  code-review-final-corrections.md  components-versions.md  dedup-pc-scan-spec.md  deployment-runbook.md  desktop-search-claude-cli.md  desktop-search-quickstart.md  email-classification.md  email-draft-reply.md  email-migration-110k.md  email-send-workflow.md  email-task-extraction.md  emailengine-integration.md  emailengine-setup-4accounts.md  embeddings-pgvector.md  event-detection.md  feedback-loop-spec.md  google-calendar-env-vars.md  google-calendar-sync.md  heartbeat-engine-spec.md  implementation-roadmap.md  knowledge-graph-schema.md  memorystore-provider-migration.md  multi-casquettes-conflicts.md  n8n-workflows-spec.md  natural-event-creation-spec.md  pc-backup-setup.md  (+24 more)
n8n-workflows/: auto-recover-ram.json  backup-daily.json  backup-retry-9h.json  detect-crash-loop.json  friday-error-handler.json  heartbeat-cron-trigger.json  restore-test-monthly.json
scripts/: Generate-NewRedisPasswords.ps1  backup.sh  (+67 more)
(+418 files in other folders)
